Downgrade vom Java 22 to Java 17
Changed the Java language version used to write and to
build the library to Java 17.

Java 17 is a LTS version. Java 21 is considered as to new and
not as widely used enough to gain a relevant user base.